--- a/StudIt/src/main/resources/studit/ui/Login.fxml
+++ b/StudIt/src/main/resources/studit/ui/Login.fxml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane prefHeight="335.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studit.ui.LoginController">
+<BorderPane prefHeight="335.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studit.ui.LoginController">
    <center>
       <VBox fx:id="vBox" prefHeight="127.0" prefWidth="640.0" BorderPane.alignment="CENTER">
         <children>
@@ -69,6 +60,7 @@
                   <Text layoutX="151.0" layoutY="159.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Passord" />
                   <TextField fx:id="usernameField" layoutX="211.0" layoutY="91.0" prefHeight="25.0" prefWidth="186.0" />
                   <Button fx:id="loginButton" layoutX="279.0" layoutY="178.0" mnemonicParsing="false" onAction="#loginButtonAction" text="Log in" />
+                  <Button layoutX="490.0" layoutY="91.0" mnemonicParsing="false" onAction="#newUserButtonAction" text="New User" />
             </children>
           </AnchorPane>
         </children>
